default all downloads to TLS compatibility
